feat: page a propos recuperant le bas de la page d'accueil. plus de front

--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-form/contact-form.component.css
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-form/contact-form.component.css
@@ -43,4 +43,6 @@ input[type=submit] {
 }
   input[type=submit]:hover {
     background-color: #154734;
+    transform: scale(1.05);
+    cursor: pointer;
   }
