--- a/FrontMarcheEtDevenir/src/app/header/header.component.html
+++ b/FrontMarcheEtDevenir/src/app/header/header.component.html
@@ -10,6 +10,7 @@
       <nav id="navigation1" class="navigation">
         <ul>
           <li><a href="/">Accueil</a></li>
+          <li><a href="/about">A propos</a></li>
           <li><a href="/offreRandonnees">Les offres</a></li>
           <li><a href="/contact">Contact</a></li>
           <li><a href="/login">Connection</a></li>
