--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.css
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.css
@@ -1,7 +1,7 @@
 main {
   padding: 2vw;
-  height: 80vh;
 }
+
 
 h1 {
   font-size: 2.5rem;
@@ -11,11 +11,17 @@ h1 {
   margin-top: 10vh
 }
 
+p {
+  padding-left: 10vw;
+}
+
+
 section {
     display: flex;
     justify-content: center;
     gap: 2vw;
-    margin-bottom: 5vh
+    margin-bottom: 5vh;
+    margin-top: 5vh;
 }
 
 section figure {
