--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.html
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.html
@@ -1,6 +1,8 @@
 <website-header></website-header>
 <main>
   <h1>Nous contacter</h1>
+  <p>Marche et Deviens propose des randonnées customisables: renseignez le nombre de participants, durée, date, region et thèmes de réflexions.</p>
+  <p>Je propose aussi un service de vidéographe à la demande : gardez une trace vidéo de votre aventure.</p>
   <section>
     <figure>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2525.6764443085412!2d3.3899799760589127!3d50.72594156749022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3220faa1723a7%3A0x6cc59e061effe816!2sRue%20de%20Lannois%206%2C%207760%20Celles%2C%20Belgique!5e0!3m2!1sfr!2sfr!4v1723458679973!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
