--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.css
@@ -16,8 +16,11 @@ h4 {
 }
 
 .btn-container {
+    width: 50%;
+    margin-left: 10vw;
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
     gap: 15px;
     margin-top: 4vh
 }
@@ -32,7 +35,7 @@ button {
   width: 250px;
   height: 60px;
   border-radius: 5px;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 1px;
@@ -40,8 +43,9 @@ button {
 }
   .boutons:hover,
   button:hover {
-    color: #FFF;
-    background-color: #154734;
+    color: #49a255;
+    background-color: white;
+    transform: scale(1.05);
   }
 
 /* Pour titre */
@@ -59,7 +63,6 @@ button {
   background-position: left;
   background-size: cover;
   box-sizing: border-box; /* Assure que le padding est inclus dans la largeur et la hauteur */
-  margin-bottom: 80px; /* Ajout de marge */
 }
 
 .hero-page_content {
@@ -81,149 +84,5 @@ button {
     font-size: 3rem;
     padding-top: 3vh;
     color: white;
-}
-
-/* Partie présentation */
-
-.presentation-container {
-    display: flex;
-    padding-left: 10vw;
-    padding-right: 10vw;
-    gap: 2vw;
-    margin-bottom: 15vh
-}
-
-video {
-    width: 70%;
-}
-
-.video-info {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: end;
-    justify-content: center;
-    gap: 2vh
-}
-
-
-/* Partie événements */
-
-.evenements,
-.nos-avis {
-    background-color: #001508;
-    color: white;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-content: center;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    margin-bottom: 5vh;
-}
-
-.evenements-wrapper {
-    height: 400px;
-    width: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 10px; /* Augmentation de la marge */
-    padding: 20px; /* Ajout de padding */
-    border-radius: 5px;
-    background-color: white;
-    color: black;
-}
-
-  .evenements-wrapper img {
-    width: auto;
-    height: 250px;
-    overflow: clip;
-  }
-
-.evenements-wrapper h5 {
-    font-size: 2rem;
-    margin-top: 1.4vh;
-}
-
-
-.evenements button {
-    width: auto;
-}
-
-/* Partie cohésion */
-
-.page-container {
-    display: grid;
-    grid-template-columns: 60% 40%;
-    grid-template-rows: 50% 50%;
-    gap: 5px;
-    padding-left: 15vw;
-    padding-right: 5vw;
-    margin-bottom: 10vh;
-    height: 600px;
-}
-
-.page-container img {
-    height: 100%;
-    transition: 500ms ease-in-out;
-    filter: grayscale(50%);
-}
-
-.page-container img:hover {
-    height: 102%;
-    object-fit: cover;
-    filter: none;
-}
-
-.page-container img:first-child {
-    grid-column: 1;
-    grid-row-start: 1 / 3;
-    width: 100%;
-    object-fit: cover;
-    object-position: 50% 60%;
-}
-
-  .page-container img:last-child {
-    grid-column: 2;
-    grid-row-start: 2;
-    object-fit: contain;
-    overflow: hidden;
-  }
-
-#img3 {
-  width: 100%;
-  object-fit: cover;
-  overflow: hidden;
-}
-
-
-
-.cohesion-container {
-    display: flex;
-    justify-content: center;
-    border : 2px solid #8C8989;
-    height: 300px;
-    width: 65%;
-    gap: 150px;
-    margin-bottom: 80px; /* Augmentation de la marge */
-    background-color: #C5C5A9;
-    align-items: center;
-    padding: 30px; /* Ajout de padding */
-}
-
-/* Partie carousel avis */
-
-
-
-
-/* Partie "ils nous ont fait confiance" */
-
-.confiance-wrapper {
-    display: flex;
-    justify-content: center;
-    gap: 150px;
-    margin-bottom: 80px; /* Augmentation de la marge */
-    padding: 30px; /* Ajout de padding */
 }
 
