--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
@@ -3,65 +3,14 @@
 <nav class="hero-page_container">
   <div class="hero-page_content">
     <h1 class="hero-page_title">Marche & Deviens</h1>
-    <h2 class="hero-page_subtitle"><i>ou le retour à l'essentiel...</i></h2>
+    <h2 class="hero-page_subtitle"><i>Un  retour à l'essentiel...</i></h2>
     <div class="btn-container">
       <a href="/contact"><p class="boutons">Professionnels</p></a>
       <a href="/offreRandonnees"><p class="boutons">Particuliers</p></a>
+      <a href="/contact"><p class="boutons">Offre sur mesure</p></a>
+      <a href="/about"><p class="boutons">A propos</p></a>
     </div>
   </div>
 </nav>
 
 
-<!-- Présentation vidéo -->
-<h3 class="presentation-title"><strong>Présentation</strong></h3>
-<nav class="presentation-container">
-  <video src="http://marchedeviens.com/wp-content/uploads/2023/03/Marche-et-Deviens-VF.mp4" controls preload="metadata" controlslist="nodownload"></video>
-  <div class="video-info">
-    <p class="video-description"><b>« Marche et Deviens »</b> est un programme d’accompagnement visant à utiliser le travail introspectif que permet la marche avec comme objectif, à minima, d’une prise de conscience de certains concepts.</p>
-    <button class="btnEnSavoirPlus">En savoir plus</button>
-  </div>
-</nav>
-
-
-<!-- Nos événements -->
-
-<section class="evenements">
-  <h3 class="evenements-title"><strong>Nos événements</strong></h3>
-  <a href="/offreRandonnees">
-    <div class="evenements-wrapper">
-
-      <img class="image-evenement" src="https://th.bing.com/th/id/OIP.77iWTkARr3usKEGZDcomsgHaE6?rs=1&pid=ImgDetMain" alt="(insérer image du lieu)">
-      <h5>Titre</h5>
-      <div class="details-evenement">
-        <p>Description</p>
-        <p>Date</p>
-        <p>Tarif</p>
-      </div>
-    </div>
-  </a>
-  <button class="btnDevis"><a href="/contact">Demandez votre devis</a></button>
-</section>
-
-<!-- Venez seuls et repartez en groupe -->
-
-<h3 class="venez-seuls-title"><strong>Venez seuls et repartez en groupe !</strong></h3>
-  <h4 class="venez-seuls-subtitle"><i>La cohésion en image...</i></h4>
-<div class="page-container">
-  <img src="https://marchedeviens.com/wp-content/uploads/2024/02/IMG_6291-1536x2048.jpg" alt="Groupe de randonneurs souriant, avec deux chiens" />
-  <img src="https://marchedeviens.com/wp-content/uploads/2024/02/IMG_6686-2048x1536.jpg" alt="Dimitri et un large groupe de jeunes, ensemble sur un pont au dessus d'une rivière.'" />
-  <img src="https://marchedeviens.com/wp-content/uploads/2024/02/5fae03df-a869-4d51-afd2-c2a3b6dd5273.jpg" alt="Deux personnes assise en foret, dessinant" id="img3" />
-  <img src="https://marchedeviens.com/wp-content/uploads/2023/05/WhatsApp-Image-2023-05-03-a-17.38.53-1536x1152.jpg" alt="Dimitri et un groupe de randonneur, posant avec un chien en Laponie." />
-</div>
-
-<!-- Carousel Avis -->
-<section class="nos-avis">
-  <h3>Nos Avis</h3>
-  <p>A venir...</p>
-</section>
-
-<!-- Ils nous ont fait confiance -->
-
-<h3 class="confiance-title">Ils nous ont fait confiance</h3>
-<div class="confiance-wrapper">
-  <p>A venir...</p>
-</div>
