--- a/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre-form/creation-offre-form.component.html
+++ b/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre-form/creation-offre-form.component.html
@@ -5,63 +5,63 @@
     <label for="date">Date de la randonnée</label>
     <input type="date" class="form-control" id="date"
           name="date" #date="ngModel"
-           [(ngModel)]="service.FormData.Date" required />
+           [(ngModel)]="service.FormData.date" required />
   </div>
 
   <div class="form-group">
     <label for="pays">Pays</label>
     <input type="text" class="form-control" id="pays"
          name="pays"  #pays="ngModel"
-           [(ngModel)]="service.FormData.Pays" required />
+           [(ngModel)]="service.FormData.pays" required />
   </div>
 
   <div class="form-group">
     <label for="region">Region</label>
     <input type="text" class="form-control" id="region"
          name="region"  #region="ngModel"
-           [(ngModel)]="service.FormData.Region" />
+           [(ngModel)]="service.FormData.region" />
   </div>
 
   <div class="form-group">
     <label for="ville">Commune de départ</label>
     <input type="text" class="form-control" id="ville"
          name="ville"  #ville="ngModel"
-           [(ngModel)]="service.FormData.Ville" required />
+           [(ngModel)]="service.FormData.ville" required />
   </div>
 
   <div class="form-group">
     <label for="prixTotal">Prix total</label>
     <input type="number" class="form-control" id="prix"
          name="prixTotal"  #prixTotal="ngModel"
-           [(ngModel)]="service.FormData.PrixTotal" required />
+           [(ngModel)]="service.FormData.prixTotal" required />
   </div>
 
   <div class="form-group">
     <label for="duree">Durée</label>
     <input type="text" class="form-control" id="duree" 
           name="duree" #duree="ngModel"
-            [(ngModel)]="service.FormData.Duree" required />
+            [(ngModel)]="service.FormData.duree" required />
   </div>
 
   <div class="form-group">
     <label for="nb-min-participants">Nombre minimum de participants</label>
     <input type="number" class="form-control" id="nb-min-participants" 
         name="nb-min-participants"   #nombreMinPersonnes="ngModel"
-          [(ngModel)]="service.FormData.NombreMinPersonnes" required />
+          [(ngModel)]="service.FormData.nombreMinPersonnes" required />
   </div>
 
   <div class="form-group">
     <label for="nb-max-participants">Nombre maximum de participants</label>
     <input type="number" class="form-control" id="nb-max-participants" 
          name="nb-max-participants"  #nombreMaxPersonnes="ngModel"
-            [(ngModel)]="service.FormData.NombreMaxPersonnes" required />
+            [(ngModel)]="service.FormData.nombreMaxPersonnes" required />
   </div>
 
   <div class="form-group">
     <label for="nom">Nom de la randonnée</label>
     <input type="text" class="form-control" id="nom"
           name="nom"  #nom="ngModel"
-            [(ngModel)]="service.FormData.Name"
+            [(ngModel)]="service.FormData.name"
            required
            />
   </div>
@@ -70,7 +70,7 @@
     <label for="description">Description</label>
     <input type="text" class="form-control" id="description"
           name="description"  #description="ngModel"
-            [(ngModel)]="service.FormData.Description"
+            [(ngModel)]="service.FormData.description"
            required
            />
   </div>
