--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
@@ -8,40 +8,16 @@
 <section class="sejours_courts">
   <h1>Séjours courts</h1>
   <div class="cardSejourCourt">
-    <div class="card">
+    <div class="card" *ngFor="let randonnee of randonnees">
       <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 1" />
-      <h3 id="titreCard">Titre</h3>
+      <h3 id="titreCard">{{randonnee.name}}</h3>
       <p class="descriptif_offre">
         <b>Description :</b><br />
-        Séjour sur la jolie montagne bleue
+        {{ randonnee.description }}
       </p>
-      <h4>Date: 14/09</h4>
-      <h4>Durée: 1/2 journée</h4>
-      <h4>Tarif: 185 euros</h4>
-      <button class="reservation-btn">Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 2" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Séjour sur la jolie montagne rouge.
-      </p>
-      <h4>Date: 12/12</h4>
-      <h4>Durée: 7 heures</h4>
-      <h4>Tarif: 123 euros</h4>
-      <button class="reservation-btn">Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 3" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Séjour sur la jolie montagne verte.
-      </p>
-      <h4>Date: 26/10</h4>
-      <h4>Durée: 2 jours</h4>
-      <h4>Tarif: 189 euros</h4>
+      <h4>{{ randonnee.date }} </h4>
+      <h4>{{ randonnee.duree / 24 }} jours.</h4>
+      <h4>{{ randonnee.prixTotal }} TTC</h4>
       <button class="reservation-btn">Réservation</button>
     </div>
   </div>
