--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.html
@@ -8,59 +8,39 @@
 <section class="sejours_courts">
   <h1>Séjours courts</h1>
   <div class="cardSejourCourt">
-    <div class="card" *ngFor="let randonnee of randonnees">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 1" />
-      <h3 id="titreCard">{{randonnee.name}}</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        {{ randonnee.description }}
-      </p>
-      <h4>{{ randonnee.date }} </h4>
-      <h4>{{ randonnee.duree / 24 }} jours.</h4>
-      <h4>{{ randonnee.prixTotal }} TTC</h4>
-      <button class="reservation-btn">Réservation</button>
+    <div *ngFor="let randonnee of randonnees">
+      <div class="card" *ngIf="(randonnee.duree < 72)">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 1" />
+        <h3 id="titreCard">{{randonnee.name}}</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          {{ randonnee.description }}
+        </p>
+        <h4>{{ randonnee.date }} </h4>
+        <h4>{{ randonnee.duree / 24 }} jours.</h4>
+        <h4>{{ randonnee.prixTotal }} TTC</h4>
+        <button class="reservation-btn">Réservation</button>
+      </div>
     </div>
   </div>
 </section>
 
 <section class="sejours_longs">
   <h1>Séjours longs</h1>
-  <div class="cardSejourLong">
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 4" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Séjour dans les Ardennes.
-      </p>
-      <h4>Date: 14/09</h4>
-      <h4>Durée: 2 jours</h4>
-      <h4>Tarif: 497 euros</h4>
-      <button class="reservation-btn">Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 5" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Séjour en Laponie.
-      </p>
-      <h4>Date: 12/12</h4>
-      <h4>Durée: 6 jours</h4>
-      <h4>Tarif: 567 euros</h4>
-      <button class="reservation-btn">Réservation</button>
-    </div>
-    <div class="card">
-      <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 6" />
-      <h3 id="titreCard">Titre</h3>
-      <p class="descriptif_offre">
-        <b>Description :</b><br />
-        Séjour en Bolivie.
-      </p>
-      <h4>Date: 26/10</h4>
-      <h4>Durée: 10 jours</h4>
-      <h4>Tarif: 1290 euros</h4>
-      <button class="reservation-btn">Réservation</button>
+  <div class="cardSejourCourt">
+    <div *ngFor="let randonnee of randonnees">
+      <div class="card" *ngIf="(randonnee.duree > 72)">
+        <img src="https://placehold.co/600x400/000000/FFFFFF/png" alt="Image 1" />
+        <h3 id="titreCard">{{randonnee.name}}</h3>
+        <p class="descriptif_offre">
+          <b>Description :</b><br />
+          {{ randonnee.description }}
+        </p>
+        <h4>{{ randonnee.date }} </h4>
+        <h4>{{ randonnee.duree / 24 }} jours.</h4>
+        <h4>{{ randonnee.prixTotal }} TTC</h4>
+        <button class="reservation-btn">Réservation</button>
+      </div>
     </div>
   </div>
   <button id="devis"><a href="/contact">Demander votre devis</a></button>
