fix: repare l'envoie de formulaire et ajout de la verification de champs

--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.css
@@ -50,3 +50,9 @@ input {
     border: 0;
     transition: 100ms ease-in-out;
   }
+
+  .error-message {
+    color: red;
+    font-size: 0.8em;
+    margin-top: 5px;
+  }
