--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -1,69 +1,59 @@
 <section>
-  <a href="/"><p> <b><</b> Page d'accueil</p></a>
+  <a href="/">
+    <p> <b></b> Page d'accueil</p>
+  </a>
 
   <h3> Créer un compte</h3>
-  <form #form="ngForm"  (submit)="onSubmit(form)">
+  <form [formGroup]="formulaire" (submit)="onSubmit()">
+
     <label for="nom">Veuillez entrer votre Nom</label>
-    <input type="text" 
-    name="nom" 
-    id="inscriptionNom"
-    placeholder="Petit"
-    #nom="ngModel"
-    
-    [(ngModel)]="service.FormData.Nom"
-    required />
+    <input type="text" name="nom" placeholder="Petit" formControlName="Nom" required />
+
+    <div class="contenair-erreur" *ngIf="champIsInvalid('Nom')">
+      <span> {{getMessageErreur('Nom')}}</span>
+    </div>
+
 
     <label for="prenom">Veuillez entrer votre Prenom</label>
-    <input type="text" 
-    name="prenom" 
-    id="inscriptionPrenom"
-    placeholder="Jean"     
-    #prenom="ngModel"
-    [(ngModel)]="service.FormData.Prenom" 
-    required />
+    <input type="text" name="prenom" placeholder="Jean" formControlName="Prenom"
+      required />
+
+    <div class="contenair-erreur" *ngIf="formulaire.get('Prenom')?.invalid && formulaire.get('Prenom')?.touched">
+      <span> {{getMessageErreur('Prenom')}}</span>
+    </div>
+
 
     <label for="mail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" 
-    name="mail" 
-    id="inscriptionMail"
-    placeholder="jean@mail.com" 
-    #mail="ngModel"
-    [(ngModel)]="service.FormData.Mail"
-    required />
+    <input type="email" name="mail" placeholder="jean@mail.com" formControlName="Mail"
+      required />
+
+    <div class="contenair-erreur" *ngIf="formulaire.get('Mail')?.invalid && formulaire.get('Mail')?.touched">
+      <span> {{getMessageErreur('Mail')}}</span>
+    </div>
 
     <label for="telephone">Veuillez entrer votre numéro de telephone</label>
-    <input type="text" name="telephone" 
-    id="inscriptionTelephone"
-    placeholder="0707070707" 
-    #telephone="ngModel"
-    [(ngModel)]="service.FormData.Telephone"
-    minlength="10"
-    maxlength="10"
-    
-    required />
+    <input type="text" name="telephone" placeholder="0707070707" formControlName="Telephone" 
+      maxlength="10" required />
+
+    <div class="contenair-erreur" *ngIf="formulaire.get('Telephone')?.invalid && formulaire.get('Telephone')?.touched">
+      <span> {{getMessageErreur('Telephone')}}</span>
+    </div>
 
     <label for="motDePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" 
-    name="motDePasse" 
-    id="inscriptionMotdePasse" 
-    placeholder="votre mot de passe"
-    #motDePasse="ngModel"
-    
-    [(ngModel)]="service.FormData.MotDePasse"
-    minlength="8"
-    maxlength="16"
-    required />
+    <input type="password" name="motDePasse" placeholder="votre mot de passe" formControlName="MotDePasse" minlength="8" maxlength="16" required />
+      
+    <div class="contenair-erreur" *ngIf="formulaire.get('MotDePasse')?.invalid && formulaire.get('MotDePasse')?.touched">
+      <span> {{getMessageErreur('MotDePasse')}}</span>
+    </div>
 
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
-    <input type="password" 
-    name="inscriptionConfirmationMotdePasse" 
-    id="inscriptionConfirmationMotdePasse"
-    placeholder="répéter votre mot de passe" 
-    minlength="8"
-    maxlength="16"
-    
-    required />
+    <input type="password" name="inscriptionConfirmationMotdePasse" formControlName="ConfirmationMotDePasse" placeholder="répéter votre mot de passe"
+      minlength="8" maxlength="16" required />
 
-    <input type="submit" value="Creer un compte" class="BouttonEnvoie"/>
+    <div class="contenair-erreur" *ngIf="formulaire.get('ConfirmationMotDePasse')?.invalid && formulaire.get('ConfirmationMotDePasse')?.touched">
+      <span> {{getMessageErreur('ConfirmationMotDePasse')}}</span>
+    </div>
+
+    <input type="submit" value="Creer un compte" class="BouttonEnvoie"  />
   </form>
 </section>
