--- a/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.css
+++ b/FrontMarcheEtDevenir/src/app/offre-randonnees/offre-randonnees.component.css
@@ -120,6 +120,18 @@ button:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+.progress-bar {
+    margin-top: 1vh;
+  width: 100%;
+  height: 20px;
+  background-color: darkgray;
+}
+
+.progress {
+  background-color: darkgreen;
+  height: 100%;
+}
+
 #devis {
   height: 50px;
   width: 300px;
@@ -179,6 +191,13 @@ button:hover {
   padding-top: 1vh;
 }
 
+.card h2 {
+    margin-top: 1vh;
+    font-weight: 800;
+    font-size: 2rem;
+    color: darkolivegreen;
+}
+
 .card p {
   width: 100%;
   font-size: 16px;
@@ -201,9 +220,11 @@ button:hover {
     font-weight: 600;
     text-transform: uppercase;
     transition: 200ms ease-in-out;
+    background-color: darkgreen;
   }
 
-.card .reservation-btn:hover {
-    color: white;
-}
+    .card .reservation-btn:hover {
+      color: white;
+      background-color: darkolivegreen;
+    }
 
