--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -24,7 +24,7 @@
 
 
     <label for="mail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="mail" placeholder="jean@mail.com" formControlName="Mail"
+    <input type="string" name="mail" placeholder="jean@mail.com" formControlName="Mail"
       required />
 
     <div class="contenair-erreur" *ngIf="formulaire.get('Mail')?.invalid && formulaire.get('Mail')?.touched">
@@ -66,7 +66,7 @@
 
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
     <input type="password" name="inscriptionConfirmationMotdePasse" formControlName="ConfirmationMotDePasse" placeholder="répéter votre mot de passe"
-      minlength="8" maxlength="16" required />
+     required />
 
     <div class="contenair-erreur" *ngIf="formulaire.get('ConfirmationMotDePasse')?.invalid && formulaire.get('ConfirmationMotDePasse')?.touched">
       <span> {{getMessageErreur('ConfirmationMotDePasse')}}</span>
